Fiz a página de Html/ css/ JavaScript

--- a/index.html
+++ b/index.html
@@ -4,18 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade JavaScript</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            color: #2c3e50;
+            text-align: center;
+            font-size: 24px;
+        }
+        p {
+            font-size: 15px;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+        }
+    </style>
 </head>
-<body>
-    <h1> Atividade de Manipulação de Strings em JavaScript</h1>
-    <h2>Exercício 1</h2>
-    <script src="src/q1.js"></script>
-    <h2>Exercício 2</h2>
-    <script src="src/q2.js"></script>
-    <h2>Exercício 3</h2>
-    <script src="src/q3.js"></script>
-    <h2>Exercício 4</h2>
-    <script src="src/q4.js"></script>
-    <h2>Exercício 5</h2>
-     <script src="src/q5.js"></script>
-</body>
+
+<img src="assets/imagem/ifpbgba.jpeg" alt="Logo do IFPB">
+ 
+<h1> Atividade de Manipulação de Strings em JavaScript</h1>
+ <p>Abra o console do navegador para ver os resultados.</p>
+
+  <script src="src/q1.js"></script>
+  <!-- Para testar outra questão, basta trocar o nome do arquivo acima -->
 </html>
