Adicionei a página principal HTML da atividade

--- a/index.html
+++ b/index.html
@@ -35,5 +35,7 @@
  <p>Abra o console do navegador para ver os resultados.</p>
 
   <script src="src/q1.js"></script>
-  <!-- Para testar outra questão, basta trocar o nome do arquivo acima -->
+  <!-- Para testar outra questão, basta trocar o nome da questão. EX: "src/q2.js" para testar a questão 2 e assim por diante. -->
 </html>
+
+
