Mudei a foto LOGO do IFPB

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
 </head>
 
-<img src="assets/imagem/ifpbgba.jpeg" alt="Logo do IFPB">
+<img src="assets/imagem/ifpb3.png" alt="Logo do IFPB">
  
 <h1> Atividade de Manipulação de Strings em JavaScript</h1>
  <p>Abra o console do navegador para ver os resultados.</p>
